--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "@actions/exec": "^1.0.3",
     "@actions/glob": "^0.1.0",
     "@actions/io": "^1.0.2",
-    "@zeit/ncc": "^0.21.0"
+    "@vercel/ncc": "^0.38.4"
   }
 }
